templates/resources/graphql-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: Issuer
    cert-manager.io/issuer: ${MY_CLUSTER_ISSUER}
    cert-manager.io/issuer-name: ${MY_CLUSTER_ISSUER}
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: graphql-to-graph-server
spec:
  host: graphql.zen.apps.${MY_CLUSTER_DOMAIN}
  path: /
  port:
    targetPort: stepzen-graph-server
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: stepzen-graph-server
    weight: 150
  wildcardPolicy: None
  
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: Issuer
    cert-manager.io/issuer: ${MY_CLUSTER_ISSUER}
    cert-manager.io/issuer-name: ${MY_CLUSTER_ISSUER}
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: graphql-to-graph-server-subscriptions
spec:
  host: graphql.zen.apps.${MY_CLUSTER_DOMAIN}
  path: /stepzen-subscriptions/
  port:
    targetPort: stepzen-graph-server-subscription
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: stepzen-graph-server-subscription
    weight: 150
  wildcardPolicy: None
